// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Story Snapshots: CustomStyle should match snapshot 1`] = `
<RCTScrollView
  style={
    {
      "backgroundColor": "#FFFFFF",
    }
  }
>
  <View>
    <View
      accessibilityLabel="Styled Room "
      accessible={true}
      importantForAccessibility="yes"
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            undefined,
            {
              "margin": undefined,
              "marginBottom": undefined,
              "marginEnd": undefined,
              "marginHorizontal": undefined,
              "marginLeft": undefined,
              "marginRight": undefined,
              "marginStart": undefined,
              "marginTop": undefined,
              "marginVertical": undefined,
            },
            {
              "backgroundColor": "#FFFFFF",
              "borderRadius": undefined,
              "opacity": 1,
            },
          ]
        }
        testID="directory-item-style"
      >
        <View
          style={{}}
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "paddingHorizontal": 15,
                },
                {
                  "height": 54,
                },
                {
                  "backgroundColor": "#e0e0e0",
                },
              ]
            }
          >
            <View
              accessibilityLabel="S's avatar"
              accessible={false}
              style={
                [
                  {
                    "borderRadius": 4,
                    "height": 30,
                    "width": 30,
                  },
                  {
                    "marginRight": 12,
                  },
                ]
              }
              testID="avatar"
            >
              <ViewManagerAdapter_ExpoImage
                borderRadius={4}
                containerViewRef={"[React.ref]"}
                contentFit="cover"
                contentPosition={
                  {
                    "left": "50%",
                    "top": "50%",
                  }
                }
                height={30}
                nativeViewRef={"[React.ref]"}
                onError={[Function]}
                onLoad={[Function]}
                onLoadStart={[Function]}
                onProgress={[Function]}
                placeholder={[]}
                priority="high"
                source={
                  [
                    {
                      "headers": {
                        "User-Agent": "RC Mobile; ios unknown; vunknown (unknown)",
                      },
                      "uri": "https://open.rocket.chat/avatar/@S?format=png&size=60",
                    },
                  ]
                }
                style={
                  {
                    "borderRadius": 4,
                    "height": 30,
                    "width": 30,
                  }
                }
                transition={null}
                width={30}
              />
            </View>
            <View
              style={
                {
                  "flex": 1,
                  "flexDirection": "column",
                  "justifyContent": "center",
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  selectable={false}
                  style={
                    [
                      {
                        "color": "#1F2329",
                        "fontSize": 16,
                      },
                      [
                        {
                          "lineHeight": 16,
                        },
                        [
                          {
                            "marginRight": 4,
                          },
                          undefined,
                        ],
                      ],
                      {
                        "fontFamily": "custom",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      {},
                    ]
                  }
                >
                  
                </Text>
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                        "flex": 1,
                        "fontFamily": "Inter",
                        "fontSize": 17,
                        "fontWeight": "500",
                        "textAlign": "left",
                      },
                      {
                        "color": "#1F2329",
                      },
                    ]
                  }
                >
                  Styled Room
                </Text>
              </View>
              <Text
                accessibilityLabel="Custom style applied"
                numberOfLines={1}
                style={
                  [
                    {
                      "backgroundColor": "transparent",
                      "fontFamily": "Inter",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "lineHeight": 22,
                      "textAlign": "left",
                    },
                    {
                      "color": "#2F343D",
                      "lineHeight": undefined,
                    },
                    {
                      "backgroundColor": "transparent",
                      "fontFamily": "Inter",
                      "fontSize": 14,
                      "fontWeight": "400",
                      "textAlign": "left",
                    },
                    {
                      "color": "#6C727A",
                    },
                  ]
                }
                testID="markdown-preview-Custom style applied"
              >
                Custom style applied
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Story Snapshots: Default should match snapshot 1`] = `
<RCTScrollView
  style={
    {
      "backgroundColor": "#FFFFFF",
    }
  }
>
  <View>
    <View
      accessibilityLabel="General "
      accessible={true}
      importantForAccessibility="yes"
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            undefined,
            {
              "margin": undefined,
              "marginBottom": undefined,
              "marginEnd": undefined,
              "marginHorizontal": undefined,
              "marginLeft": undefined,
              "marginRight": undefined,
              "marginStart": undefined,
              "marginTop": undefined,
              "marginVertical": undefined,
            },
            {
              "backgroundColor": "#FFFFFF",
              "borderRadius": undefined,
              "opacity": 1,
            },
          ]
        }
        testID="directory-item"
      >
        <View
          style={{}}
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "paddingHorizontal": 15,
                },
                {
                  "height": 54,
                },
                undefined,
              ]
            }
          >
            <View
              accessibilityLabel="G's avatar"
              accessible={false}
              style={
                [
                  {
                    "borderRadius": 4,
                    "height": 30,
                    "width": 30,
                  },
                  {
                    "marginRight": 12,
                  },
                ]
              }
              testID="avatar"
            >
              <ViewManagerAdapter_ExpoImage
                borderRadius={4}
                containerViewRef={"[React.ref]"}
                contentFit="cover"
                contentPosition={
                  {
                    "left": "50%",
                    "top": "50%",
                  }
                }
                height={30}
                nativeViewRef={"[React.ref]"}
                onError={[Function]}
                onLoad={[Function]}
                onLoadStart={[Function]}
                onProgress={[Function]}
                placeholder={[]}
                priority="high"
                source={
                  [
                    {
                      "headers": {
                        "User-Agent": "RC Mobile; ios unknown; vunknown (unknown)",
                      },
                      "uri": "https://open.rocket.chat/avatar/@G?format=png&size=60",
                    },
                  ]
                }
                style={
                  {
                    "borderRadius": 4,
                    "height": 30,
                    "width": 30,
                  }
                }
                transition={null}
                width={30}
              />
            </View>
            <View
              style={
                {
                  "flex": 1,
                  "flexDirection": "column",
                  "justifyContent": "center",
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  selectable={false}
                  style={
                    [
                      {
                        "color": "#1F2329",
                        "fontSize": 16,
                      },
                      [
                        {
                          "lineHeight": 16,
                        },
                        [
                          {
                            "marginRight": 4,
                          },
                          undefined,
                        ],
                      ],
                      {
                        "fontFamily": "custom",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      {},
                    ]
                  }
                >
                  
                </Text>
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                        "flex": 1,
                        "fontFamily": "Inter",
                        "fontSize": 17,
                        "fontWeight": "500",
                        "textAlign": "left",
                      },
                      {
                        "color": "#1F2329",
                      },
                    ]
                  }
                >
                  General
                </Text>
              </View>
              <Text
                accessibilityLabel="A public room"
                numberOfLines={1}
                style={
                  [
                    {
                      "backgroundColor": "transparent",
                      "fontFamily": "Inter",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "lineHeight": 22,
                      "textAlign": "left",
                    },
                    {
                      "color": "#2F343D",
                      "lineHeight": undefined,
                    },
                    {
                      "backgroundColor": "transparent",
                      "fontFamily": "Inter",
                      "fontSize": 14,
                      "fontWeight": "400",
                      "textAlign": "left",
                    },
                    {
                      "color": "#6C727A",
                    },
                  ]
                }
                testID="markdown-preview-A public room"
              >
                A public room
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Story Snapshots: DirectMessage should match snapshot 1`] = `
<RCTScrollView
  style={
    {
      "backgroundColor": "#FFFFFF",
    }
  }
>
  <View>
    <View
      accessibilityLabel="Alice Johnson "
      accessible={true}
      importantForAccessibility="yes"
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            undefined,
            {
              "margin": undefined,
              "marginBottom": undefined,
              "marginEnd": undefined,
              "marginHorizontal": undefined,
              "marginLeft": undefined,
              "marginRight": undefined,
              "marginStart": undefined,
              "marginTop": undefined,
              "marginVertical": undefined,
            },
            {
              "backgroundColor": "#FFFFFF",
              "borderRadius": undefined,
              "opacity": 1,
            },
          ]
        }
        testID="directory-item-dm"
      >
        <View
          style={{}}
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "paddingHorizontal": 15,
                },
                {
                  "height": 54,
                },
                undefined,
              ]
            }
          >
            <View
              accessibilityLabel="A's avatar"
              accessible={false}
              style={
                [
                  {
                    "borderRadius": 4,
                    "height": 30,
                    "width": 30,
                  },
                  {
                    "marginRight": 12,
                  },
                ]
              }
              testID="avatar"
            >
              <ViewManagerAdapter_ExpoImage
                borderRadius={4}
                containerViewRef={"[React.ref]"}
                contentFit="cover"
                contentPosition={
                  {
                    "left": "50%",
                    "top": "50%",
                  }
                }
                height={30}
                nativeViewRef={"[React.ref]"}
                onError={[Function]}
                onLoad={[Function]}
                onLoadStart={[Function]}
                onProgress={[Function]}
                placeholder={[]}
                priority="high"
                source={
                  [
                    {
                      "headers": {
                        "User-Agent": "RC Mobile; ios unknown; vunknown (unknown)",
                      },
                      "uri": "https://open.rocket.chat/avatar/A?format=png&size=60",
                    },
                  ]
                }
                style={
                  {
                    "borderRadius": 4,
                    "height": 30,
                    "width": 30,
                  }
                }
                transition={null}
                width={30}
              />
            </View>
            <View
              style={
                {
                  "flex": 1,
                  "flexDirection": "column",
                  "justifyContent": "center",
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                        "flex": 1,
                        "fontFamily": "Inter",
                        "fontSize": 17,
                        "fontWeight": "500",
                        "textAlign": "left",
                      },
                      {
                        "color": "#1F2329",
                      },
                    ]
                  }
                >
                  Alice Johnson
                </Text>
              </View>
              <Text
                accessibilityLabel="Hey there!"
                numberOfLines={1}
                style={
                  [
                    {
                      "backgroundColor": "transparent",
                      "fontFamily": "Inter",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "lineHeight": 22,
                      "textAlign": "left",
                    },
                    {
                      "color": "#2F343D",
                      "lineHeight": undefined,
                    },
                    {
                      "backgroundColor": "transparent",
                      "fontFamily": "Inter",
                      "fontSize": 14,
                      "fontWeight": "400",
                      "textAlign": "left",
                    },
                    {
                      "color": "#6C727A",
                    },
                  ]
                }
                testID="markdown-preview-Hey there!"
              >
                Hey there!
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Story Snapshots: LongRoomName should match snapshot 1`] = `
<RCTScrollView
  style={
    {
      "backgroundColor": "#FFFFFF",
    }
  }
>
  <View>
    <View
      accessibilityLabel="This is a very very very very very very very long room name that should be truncated 9999 members"
      accessible={true}
      importantForAccessibility="yes"
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            undefined,
            {
              "margin": undefined,
              "marginBottom": undefined,
              "marginEnd": undefined,
              "marginHorizontal": undefined,
              "marginLeft": undefined,
              "marginRight": undefined,
              "marginStart": undefined,
              "marginTop": undefined,
              "marginVertical": undefined,
            },
            {
              "backgroundColor": "#FFFFFF",
              "borderRadius": undefined,
              "opacity": 1,
            },
          ]
        }
        testID="directory-item-long"
      >
        <View
          style={{}}
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "paddingHorizontal": 15,
                },
                {
                  "height": 54,
                },
                undefined,
              ]
            }
          >
            <View
              accessibilityLabel="L's avatar"
              accessible={false}
              style={
                [
                  {
                    "borderRadius": 4,
                    "height": 30,
                    "width": 30,
                  },
                  {
                    "marginRight": 12,
                  },
                ]
              }
              testID="avatar"
            >
              <ViewManagerAdapter_ExpoImage
                borderRadius={4}
                containerViewRef={"[React.ref]"}
                contentFit="cover"
                contentPosition={
                  {
                    "left": "50%",
                    "top": "50%",
                  }
                }
                height={30}
                nativeViewRef={"[React.ref]"}
                onError={[Function]}
                onLoad={[Function]}
                onLoadStart={[Function]}
                onProgress={[Function]}
                placeholder={[]}
                priority="high"
                source={
                  [
                    {
                      "headers": {
                        "User-Agent": "RC Mobile; ios unknown; vunknown (unknown)",
                      },
                      "uri": "https://open.rocket.chat/avatar/@L?format=png&size=60",
                    },
                  ]
                }
                style={
                  {
                    "borderRadius": 4,
                    "height": 30,
                    "width": 30,
                  }
                }
                transition={null}
                width={30}
              />
            </View>
            <View
              style={
                {
                  "flex": 1,
                  "flexDirection": "column",
                  "justifyContent": "center",
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  selectable={false}
                  style={
                    [
                      {
                        "color": "#1F2329",
                        "fontSize": 16,
                      },
                      [
                        {
                          "lineHeight": 16,
                        },
                        [
                          {
                            "marginRight": 4,
                          },
                          undefined,
                        ],
                      ],
                      {
                        "fontFamily": "custom",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      {},
                    ]
                  }
                >
                  
                </Text>
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                        "flex": 1,
                        "fontFamily": "Inter",
                        "fontSize": 17,
                        "fontWeight": "500",
                        "textAlign": "left",
                      },
                      {
                        "color": "#1F2329",
                      },
                    ]
                  }
                >
                  This is a very very very very very very very long room name that should be truncated
                </Text>
              </View>
              <Text
                accessibilityLabel="Long name test"
                numberOfLines={1}
                style={
                  [
                    {
                      "backgroundColor": "transparent",
                      "fontFamily": "Inter",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "lineHeight": 22,
                      "textAlign": "left",
                    },
                    {
                      "color": "#2F343D",
                      "lineHeight": undefined,
                    },
                    {
                      "backgroundColor": "transparent",
                      "fontFamily": "Inter",
                      "fontSize": 14,
                      "fontWeight": "400",
                      "textAlign": "left",
                    },
                    {
                      "color": "#6C727A",
                    },
                  ]
                }
                testID="markdown-preview-Long name test"
              >
                Long name test
              </Text>
            </View>
            <Text
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "fontFamily": "Inter",
                    "fontSize": 14,
                    "fontWeight": "400",
                    "paddingLeft": 10,
                    "textAlign": "left",
                  },
                  {
                    "color": "#6C727A",
                  },
                ]
              }
            >
              9999 members
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Story Snapshots: OnlyTitle should match snapshot 1`] = `
<RCTScrollView
  style={
    {
      "backgroundColor": "#FFFFFF",
    }
  }
>
  <View>
    <View
      accessibilityLabel="Just a title "
      accessible={true}
      importantForAccessibility="yes"
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            undefined,
            {
              "margin": undefined,
              "marginBottom": undefined,
              "marginEnd": undefined,
              "marginHorizontal": undefined,
              "marginLeft": undefined,
              "marginRight": undefined,
              "marginStart": undefined,
              "marginTop": undefined,
              "marginVertical": undefined,
            },
            {
              "backgroundColor": "#FFFFFF",
              "borderRadius": undefined,
              "opacity": 1,
            },
          ]
        }
        testID="directory-item-title"
      >
        <View
          style={{}}
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "paddingHorizontal": 15,
                },
                {
                  "height": 54,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                {
                  "flex": 1,
                  "flexDirection": "column",
                  "justifyContent": "center",
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  selectable={false}
                  style={
                    [
                      {
                        "color": "#1F2329",
                        "fontSize": 16,
                      },
                      [
                        {
                          "lineHeight": 16,
                        },
                        [
                          {
                            "marginRight": 4,
                          },
                          undefined,
                        ],
                      ],
                      {
                        "fontFamily": "custom",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      {},
                    ]
                  }
                >
                  
                </Text>
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                        "flex": 1,
                        "fontFamily": "Inter",
                        "fontSize": 17,
                        "fontWeight": "500",
                        "textAlign": "left",
                      },
                      {
                        "color": "#1F2329",
                      },
                    ]
                  }
                >
                  Just a title
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Story Snapshots: TeamMain should match snapshot 1`] = `
<RCTScrollView
  style={
    {
      "backgroundColor": "#FFFFFF",
    }
  }
>
  <View>
    <View
      accessibilityLabel="Engineering Team "
      accessible={true}
      importantForAccessibility="yes"
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            undefined,
            {
              "margin": undefined,
              "marginBottom": undefined,
              "marginEnd": undefined,
              "marginHorizontal": undefined,
              "marginLeft": undefined,
              "marginRight": undefined,
              "marginStart": undefined,
              "marginTop": undefined,
              "marginVertical": undefined,
            },
            {
              "backgroundColor": "#FFFFFF",
              "borderRadius": undefined,
              "opacity": 1,
            },
          ]
        }
        testID="directory-item-team"
      >
        <View
          style={{}}
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "paddingHorizontal": 15,
                },
                {
                  "height": 54,
                },
                undefined,
              ]
            }
          >
            <View
              accessibilityLabel="E's avatar"
              accessible={false}
              style={
                [
                  {
                    "borderRadius": 4,
                    "height": 30,
                    "width": 30,
                  },
                  {
                    "marginRight": 12,
                  },
                ]
              }
              testID="avatar"
            >
              <ViewManagerAdapter_ExpoImage
                borderRadius={4}
                containerViewRef={"[React.ref]"}
                contentFit="cover"
                contentPosition={
                  {
                    "left": "50%",
                    "top": "50%",
                  }
                }
                height={30}
                nativeViewRef={"[React.ref]"}
                onError={[Function]}
                onLoad={[Function]}
                onLoadStart={[Function]}
                onProgress={[Function]}
                placeholder={[]}
                priority="high"
                source={
                  [
                    {
                      "headers": {
                        "User-Agent": "RC Mobile; ios unknown; vunknown (unknown)",
                      },
                      "uri": "https://open.rocket.chat/avatar/@E?format=png&size=60",
                    },
                  ]
                }
                style={
                  {
                    "borderRadius": 4,
                    "height": 30,
                    "width": 30,
                  }
                }
                transition={null}
                width={30}
              />
            </View>
            <View
              style={
                {
                  "flex": 1,
                  "flexDirection": "column",
                  "justifyContent": "center",
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  selectable={false}
                  style={
                    [
                      {
                        "color": "#1F2329",
                        "fontSize": 16,
                      },
                      [
                        {
                          "lineHeight": 16,
                        },
                        [
                          {
                            "marginRight": 4,
                          },
                          undefined,
                        ],
                      ],
                      {
                        "fontFamily": "custom",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      {},
                    ]
                  }
                >
                  
                </Text>
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                        "flex": 1,
                        "fontFamily": "Inter",
                        "fontSize": 17,
                        "fontWeight": "500",
                        "textAlign": "left",
                      },
                      {
                        "color": "#1F2329",
                      },
                    ]
                  }
                >
                  Engineering Team
                </Text>
              </View>
              <Text
                accessibilityLabel="Main team room"
                numberOfLines={1}
                style={
                  [
                    {
                      "backgroundColor": "transparent",
                      "fontFamily": "Inter",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "lineHeight": 22,
                      "textAlign": "left",
                    },
                    {
                      "color": "#2F343D",
                      "lineHeight": undefined,
                    },
                    {
                      "backgroundColor": "transparent",
                      "fontFamily": "Inter",
                      "fontSize": 14,
                      "fontWeight": "400",
                      "textAlign": "left",
                    },
                    {
                      "color": "#6C727A",
                    },
                  ]
                }
                testID="markdown-preview-Main team room"
              >
                Main team room
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Story Snapshots: WithRightLabel should match snapshot 1`] = `
<RCTScrollView
  style={
    {
      "backgroundColor": "#FFFFFF",
    }
  }
>
  <View>
    <View
      accessibilityLabel="General 123 members"
      accessible={true}
      importantForAccessibility="yes"
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            undefined,
            {
              "margin": undefined,
              "marginBottom": undefined,
              "marginEnd": undefined,
              "marginHorizontal": undefined,
              "marginLeft": undefined,
              "marginRight": undefined,
              "marginStart": undefined,
              "marginTop": undefined,
              "marginVertical": undefined,
            },
            {
              "backgroundColor": "#FFFFFF",
              "borderRadius": undefined,
              "opacity": 1,
            },
          ]
        }
        testID="directory-item-label"
      >
        <View
          style={{}}
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "paddingHorizontal": 15,
                },
                {
                  "height": 54,
                },
                undefined,
              ]
            }
          >
            <View
              accessibilityLabel="G's avatar"
              accessible={false}
              style={
                [
                  {
                    "borderRadius": 4,
                    "height": 30,
                    "width": 30,
                  },
                  {
                    "marginRight": 12,
                  },
                ]
              }
              testID="avatar"
            >
              <ViewManagerAdapter_ExpoImage
                borderRadius={4}
                containerViewRef={"[React.ref]"}
                contentFit="cover"
                contentPosition={
                  {
                    "left": "50%",
                    "top": "50%",
                  }
                }
                height={30}
                nativeViewRef={"[React.ref]"}
                onError={[Function]}
                onLoad={[Function]}
                onLoadStart={[Function]}
                onProgress={[Function]}
                placeholder={[]}
                priority="high"
                source={
                  [
                    {
                      "headers": {
                        "User-Agent": "RC Mobile; ios unknown; vunknown (unknown)",
                      },
                      "uri": "https://open.rocket.chat/avatar/@G?format=png&size=60",
                    },
                  ]
                }
                style={
                  {
                    "borderRadius": 4,
                    "height": 30,
                    "width": 30,
                  }
                }
                transition={null}
                width={30}
              />
            </View>
            <View
              style={
                {
                  "flex": 1,
                  "flexDirection": "column",
                  "justifyContent": "center",
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  selectable={false}
                  style={
                    [
                      {
                        "color": "#1F2329",
                        "fontSize": 16,
                      },
                      [
                        {
                          "lineHeight": 16,
                        },
                        [
                          {
                            "marginRight": 4,
                          },
                          undefined,
                        ],
                      ],
                      {
                        "fontFamily": "custom",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      {},
                    ]
                  }
                >
                  
                </Text>
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                        "flex": 1,
                        "fontFamily": "Inter",
                        "fontSize": 17,
                        "fontWeight": "500",
                        "textAlign": "left",
                      },
                      {
                        "color": "#1F2329",
                      },
                    ]
                  }
                >
                  General
                </Text>
              </View>
              <Text
                accessibilityLabel="Room with label"
                numberOfLines={1}
                style={
                  [
                    {
                      "backgroundColor": "transparent",
                      "fontFamily": "Inter",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "lineHeight": 22,
                      "textAlign": "left",
                    },
                    {
                      "color": "#2F343D",
                      "lineHeight": undefined,
                    },
                    {
                      "backgroundColor": "transparent",
                      "fontFamily": "Inter",
                      "fontSize": 14,
                      "fontWeight": "400",
                      "textAlign": "left",
                    },
                    {
                      "color": "#6C727A",
                    },
                  ]
                }
                testID="markdown-preview-Room with label"
              >
                Room with label
              </Text>
            </View>
            <Text
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "fontFamily": "Inter",
                    "fontSize": 14,
                    "fontWeight": "400",
                    "paddingLeft": 10,
                    "textAlign": "left",
                  },
                  {
                    "color": "#6C727A",
                  },
                ]
              }
            >
              123 members
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Story Snapshots: WithoutDescription should match snapshot 1`] = `
<RCTScrollView
  style={
    {
      "backgroundColor": "#FFFFFF",
    }
  }
>
  <View>
    <View
      accessibilityLabel="No description room "
      accessible={true}
      importantForAccessibility="yes"
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            undefined,
            {
              "margin": undefined,
              "marginBottom": undefined,
              "marginEnd": undefined,
              "marginHorizontal": undefined,
              "marginLeft": undefined,
              "marginRight": undefined,
              "marginStart": undefined,
              "marginTop": undefined,
              "marginVertical": undefined,
            },
            {
              "backgroundColor": "#FFFFFF",
              "borderRadius": undefined,
              "opacity": 1,
            },
          ]
        }
        testID="directory-item-no-desc"
      >
        <View
          style={{}}
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "paddingHorizontal": 15,
                },
                {
                  "height": 54,
                },
                undefined,
              ]
            }
          >
            <View
              accessibilityLabel="N's avatar"
              accessible={false}
              style={
                [
                  {
                    "borderRadius": 4,
                    "height": 30,
                    "width": 30,
                  },
                  {
                    "marginRight": 12,
                  },
                ]
              }
              testID="avatar"
            >
              <ViewManagerAdapter_ExpoImage
                borderRadius={4}
                containerViewRef={"[React.ref]"}
                contentFit="cover"
                contentPosition={
                  {
                    "left": "50%",
                    "top": "50%",
                  }
                }
                height={30}
                nativeViewRef={"[React.ref]"}
                onError={[Function]}
                onLoad={[Function]}
                onLoadStart={[Function]}
                onProgress={[Function]}
                placeholder={[]}
                priority="high"
                source={
                  [
                    {
                      "headers": {
                        "User-Agent": "RC Mobile; ios unknown; vunknown (unknown)",
                      },
                      "uri": "https://open.rocket.chat/avatar/@N?format=png&size=60",
                    },
                  ]
                }
                style={
                  {
                    "borderRadius": 4,
                    "height": 30,
                    "width": 30,
                  }
                }
                transition={null}
                width={30}
              />
            </View>
            <View
              style={
                {
                  "flex": 1,
                  "flexDirection": "column",
                  "justifyContent": "center",
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  selectable={false}
                  style={
                    [
                      {
                        "color": "#1F2329",
                        "fontSize": 16,
                      },
                      [
                        {
                          "lineHeight": 16,
                        },
                        [
                          {
                            "marginRight": 4,
                          },
                          undefined,
                        ],
                      ],
                      {
                        "fontFamily": "custom",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      {},
                    ]
                  }
                >
                  
                </Text>
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                        "flex": 1,
                        "fontFamily": "Inter",
                        "fontSize": 17,
                        "fontWeight": "500",
                        "textAlign": "left",
                      },
                      {
                        "color": "#1F2329",
                      },
                    ]
                  }
                >
                  No description room
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
